teste sinistro mediator funcionando e o apolice só falta o 002