@@ -1,8 +1,10 @@
 package br.edu.cs.poo.ac.seguro.mediators;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.List;
 
 import br.edu.cs.poo.ac.seguro.daos.ApoliceDAO;
 import br.edu.cs.poo.ac.seguro.daos.SeguradoEmpresaDAO;
@@ -17,354 +19,218 @@ import br.edu.cs.poo.ac.seguro.entidades.SeguradoEmpresa;
 import br.edu.cs.poo.ac.seguro.entidades.SeguradoPessoa;
 import br.edu.cs.poo.ac.seguro.entidades.Sinistro;
 import br.edu.cs.poo.ac.seguro.entidades.Veiculo;
-import lombok.Getter;
-
-import static br.edu.cs.poo.ac.seguro.mediators.StringUtils.ehNuloOuBranco;
 
 public class ApoliceMediator {
-    @Getter
-    private static ApoliceMediator instancia = new ApoliceMediator();
     private SeguradoPessoaDAO daoSegPes;
+    private SeguradoEmpresaDAO daoSegEmp;
     private VeiculoDAO daoVel;
     private ApoliceDAO daoApo;
-    private ApoliceMediator() {}
+    private SinistroDAO daoSin;
 
-    private CategoriaVeiculo obterCategoriaPorCodigo(int codigo) {
-        for (CategoriaVeiculo categoria : CategoriaVeiculo.values()) {
-            if (categoria.getCodigo() == codigo) {
-                return categoria;
-            }
-        }
-        return null;
+    private static ApoliceMediator instancia;
+
+    private ApoliceMediator() {
+        this.daoSegPes = new SeguradoPessoaDAO();
+        this.daoSegEmp = new SeguradoEmpresaDAO();
+        this.daoVel = new VeiculoDAO();
+        this.daoApo = new ApoliceDAO();
+        this.daoSin = new SinistroDAO();
     }
 
-    public BigDecimal obterValorCarroParaAno(CategoriaVeiculo categoria, int ano) {
-        for (PrecoAno precoAno : categoria.getPrecosAnos()) {
-            if (precoAno.getAno() == ano) {
-                return BigDecimal.valueOf(precoAno.getPreco());
-            }
+    public static ApoliceMediator getInstancia() {
+        if (instancia == null) {
+            instancia = new ApoliceMediator();
         }
-        return BigDecimal.ZERO;
+        return instancia;
     }
 
     public RetornoInclusaoApolice incluirApolice(DadosVeiculo dados) {
         if (dados == null) {
             return new RetornoInclusaoApolice(null, "Dados do veículo devem ser informados");
         }
-        String msg = validarTodosDadosVeiculo(dados);
 
-        if(msg == null){
-            daoApo = new ApoliceDAO();
-            String numeroApolice = gerarNumero(dados.getCpfOuCnpj(), dados.getPlaca());
-
-            SeguradoPessoa seguradoPessoa = null;
-            SeguradoEmpresa seguradoEmpresa = null;
-            Segurado seguradoAtual = null;
-            boolean isEhLocadoraDeVeiculos;
-
-            SeguradoPessoaDAO seguradoPessoaDAO = new SeguradoPessoaDAO();
-            SeguradoEmpresaDAO seguradoEmpresaDAO = new SeguradoEmpresaDAO();
-
-            seguradoPessoa = seguradoPessoaDAO.buscar(dados.getCpfOuCnpj());
-            if (seguradoPessoa != null) {
-                seguradoAtual = seguradoPessoa;
-                isEhLocadoraDeVeiculos = false;
-            } else {
-                seguradoEmpresa = seguradoEmpresaDAO.buscar(dados.getCpfOuCnpj());
-                seguradoAtual = seguradoEmpresa;
-                isEhLocadoraDeVeiculos = seguradoEmpresa != null && seguradoEmpresa.isEhLocadoraDeVeiculos();
-            }
-
-            Veiculo veiculo = daoVel.buscar(dados.getPlaca());
-            BigDecimal premio = calcularPremio(seguradoAtual, isEhLocadoraDeVeiculos, dados).setScale(2);
-            BigDecimal percentual = new BigDecimal("1.3"); // 130% = 1.3
-            BigDecimal vpb = premio.add(seguradoAtual.getBonus().divide(BigDecimal.TEN));
-            BigDecimal franquia = percentual.multiply(vpb).setScale(2); // Calcular franquia como 130% de VPB.
-            String numero = "000";
-
-            Apolice novaApolice = new Apolice(numero, veiculo, franquia, premio, dados.getValorMaximoSegurado(), LocalDate.now());
-            novaApolice.setNumero(numeroApolice);
-
-            daoApo.incluir(novaApolice);
-            SinistroDAO sinistroDAO = new SinistroDAO();
-            Sinistro[] todosSinistros = sinistroDAO.buscarTodos();
-            int anoAnterior = LocalDateTime.now().getYear() - 1;
-
-            boolean houveSinistro = false;
-            if (todosSinistros != null) {
-                for (Sinistro sin : todosSinistros) {
-                    if (sin != null && sin.getVeiculo() != null &&
-                            sin.getDataHoraSinistro() != null &&
-                            sin.getVeiculo().getPlaca().equals(dados.getPlaca()) &&
-                            sin.getDataHoraSinistro().getYear() == anoAnterior) {
-                        houveSinistro = true;
-                        break;
-                    }
-                }
-            }
-
-            if (!houveSinistro) {
-                BigDecimal bonusAtual = seguradoAtual.getBonus();
-                BigDecimal bonusAdicional = premio.multiply(new BigDecimal("0.3")).setScale(2);
-                seguradoAtual.creditarBonus(bonusAdicional);
-
-                if (isEhLocadoraDeVeiculos && seguradoAtual instanceof SeguradoEmpresa) {
-                    seguradoEmpresaDAO.alterar((SeguradoEmpresa) seguradoAtual);
-                } else if (!isEhLocadoraDeVeiculos && seguradoAtual instanceof SeguradoPessoa) {
-                    seguradoPessoaDAO.alterar((SeguradoPessoa) seguradoAtual);
-                }
-            }
-
-            return new RetornoInclusaoApolice(numeroApolice, null);
+        String cpfOuCnpj = dados.getCpfOuCnpj();
+        if (cpfOuCnpj == null || cpfOuCnpj.trim().isEmpty()) {
+            return new RetornoInclusaoApolice(null, "CPF ou CNPJ deve ser informado");
         }
 
-        return new RetornoInclusaoApolice(null, msg);
+        boolean isCPF = cpfOuCnpj.length() == 11;
+        boolean isCNPJ = cpfOuCnpj.length() == 14;
+
+        if (isCPF && !ValidadorCpfCnpj.ehCpfValido(cpfOuCnpj)) {
+            return new RetornoInclusaoApolice(null, "CPF inválido");
+        }
+        if (isCNPJ && !ValidadorCpfCnpj.ehCnpjValido(cpfOuCnpj)) {
+            return new RetornoInclusaoApolice(null, "CNPJ inválido");
+        }
+
+        if (dados.getPlaca() == null || dados.getPlaca().trim().isEmpty()) {
+            return new RetornoInclusaoApolice(null, "Placa do veículo deve ser informada");
+        }
+
+        if (dados.getAno() < 2020 || dados.getAno() > 2025) {
+            return new RetornoInclusaoApolice(null, "Ano tem que estar entre 2020 e 2025, incluindo estes");
+        }
+
+        if (dados.getValorMaximoSegurado() == null) {
+            return new RetornoInclusaoApolice(null, "Valor máximo segurado deve ser informado");
+        }
+
+        CategoriaVeiculo categoria = CategoriaVeiculo.obter(dados.getCodigoCategoria());
+        if (categoria == null) {
+            return new RetornoInclusaoApolice(null, "Categoria inválida");
+        }
+
+        BigDecimal valorTabela = null;
+        for (PrecoAno pa : categoria.getPrecosAnos()) {
+            if (pa.getAno() == dados.getAno()) {
+                valorTabela = BigDecimal.valueOf(pa.getPreco());
+                break;
+            }
+        }
+
+        if (valorTabela == null) {
+            return new RetornoInclusaoApolice(null, "Ano não disponível para a categoria");
+        }
+
+        BigDecimal valorInformado = dados.getValorMaximoSegurado().setScale(2, RoundingMode.HALF_UP);
+        BigDecimal limiteInferior = valorTabela.multiply(new BigDecimal("0.75")).setScale(2, RoundingMode.HALF_UP);
+        BigDecimal limiteSuperior = valorTabela.setScale(2, RoundingMode.HALF_UP);
+
+        if (valorInformado.compareTo(limiteInferior) < 0 || valorInformado.compareTo(limiteSuperior) > 0) {
+            return new RetornoInclusaoApolice(null, "Valor máximo segurado deve estar entre 75% e 100% do valor do carro encontrado na categoria");
+        }
+
+        SeguradoPessoa pessoa = null;
+        SeguradoEmpresa empresa = null;
+        Segurado proprietario;
+
+        if (isCPF) {
+            pessoa = daoSegPes.buscar(cpfOuCnpj);
+            if (pessoa == null) {
+                return new RetornoInclusaoApolice(null, "CPF inexistente no cadastro de pessoas");
+            }
+            proprietario = pessoa;
+        } else {
+            empresa = daoSegEmp.buscar(cpfOuCnpj);
+            if (empresa == null) {
+                return new RetornoInclusaoApolice(null, "CNPJ inexistente no cadastro de empresas");
+            }
+            proprietario = empresa;
+        }
+
+        Veiculo veiculo = daoVel.buscar(dados.getPlaca());
+        LocalDate hoje = LocalDate.now();
+        String numeroApolice = isCPF
+                ? hoje.getYear() + "000" + cpfOuCnpj + dados.getPlaca()
+                : hoje.getYear() + cpfOuCnpj + dados.getPlaca();
+
+        Apolice apoliceExistente = daoApo.buscar(numeroApolice);
+        if (apoliceExistente != null) {
+            return new RetornoInclusaoApolice(null, "Apólice já existente para ano atual e veículo");
+        }
+
+        Veiculo novoVeiculo = new Veiculo(dados.getPlaca(), dados.getAno(), proprietario ,categoria);
+        if (veiculo == null) {
+            daoVel.incluir(novoVeiculo);
+        } else {
+            veiculo.setProprietario(proprietario);
+            daoVel.alterar(veiculo);
+            novoVeiculo = veiculo;
+        }
+
+        BigDecimal vpa = dados.getValorMaximoSegurado().multiply(new BigDecimal("0.03")).setScale(2, RoundingMode.HALF_UP);
+        BigDecimal vpb = vpa;
+        if (proprietario instanceof SeguradoEmpresa && ((SeguradoEmpresa) proprietario).isEhLocadoraDeVeiculos()) {
+            vpb = vpa.multiply(new BigDecimal("1.2")).setScale(2, RoundingMode.HALF_UP);
+        }
+
+        BigDecimal bonus = proprietario.getBonus();
+        BigDecimal vpc = vpb.subtract(bonus.divide(new BigDecimal("10"), 2, RoundingMode.HALF_UP));
+        BigDecimal premio = vpc.compareTo(BigDecimal.ZERO) > 0 ? vpc : BigDecimal.ZERO;
+        BigDecimal franquia = vpb.multiply(new BigDecimal("1.3")).setScale(2, RoundingMode.HALF_UP);
+
+        Apolice novaApolice = new Apolice(numeroApolice ,novoVeiculo, franquia, premio, dados.getValorMaximoSegurado(), hoje);
+        daoApo.incluir(novaApolice);
+
+        int anoAnterior = hoje.minusYears(1).getYear();
+        boolean temSinistroAnoAnterior = false;
+
+        for (Sinistro sin : daoSin.buscarTodosLista()) {
+            Veiculo vSin = sin.getVeiculo();
+            boolean mesmaPlaca = vSin != null &&
+                    vSin.getPlaca().equalsIgnoreCase(novoVeiculo.getPlaca());
+            boolean mesmoAno = sin.getDataHoraSinistro().getYear() == anoAnterior;
+
+            if (mesmaPlaca && mesmoAno) {
+                temSinistroAnoAnterior = true;
+                break;
+            }
+        }
+
+        if (!temSinistroAnoAnterior) {
+            BigDecimal bonusAdicional = premio.multiply(new BigDecimal("0.3")).setScale(2, RoundingMode.HALF_UP);
+
+            if (proprietario instanceof SeguradoPessoa) {
+                SeguradoPessoa pessoaParaAtualizar = (SeguradoPessoa) proprietario;
+                SeguradoPessoa pessoaAtualizada = new SeguradoPessoa(
+                        pessoaParaAtualizar.getNome(),
+                        pessoaParaAtualizar.getEndereco(),
+                        pessoaParaAtualizar.getDataNascimento(),
+                        pessoaParaAtualizar.getBonus().add(bonusAdicional).setScale(2, RoundingMode.HALF_UP),
+                        pessoaParaAtualizar.getCpf(),
+                        pessoaParaAtualizar.getRenda()
+                );
+                daoSegPes.alterar(pessoaAtualizada);
+            } else if (proprietario instanceof SeguradoEmpresa) {
+                SeguradoEmpresa empresaParaAtualizar = (SeguradoEmpresa) proprietario;
+                SeguradoEmpresa empresaAtualizada = new SeguradoEmpresa(
+                        empresaParaAtualizar.getNome(),
+                        empresaParaAtualizar.getEndereco(),
+                        empresaParaAtualizar.getDataAbertura(),
+                        empresaParaAtualizar.getBonus().add(bonusAdicional).setScale(2, RoundingMode.HALF_UP),
+                        empresaParaAtualizar.getCnpj(),
+                        empresaParaAtualizar.getFaturamento(),
+                        empresaParaAtualizar.isEhLocadoraDeVeiculos()
+                );
+                daoSegEmp.alterar(empresaAtualizada);
+            }
+        }
+
+        return new RetornoInclusaoApolice(numeroApolice, null);
     }
 
     public Apolice buscarApolice(String numero) {
-        daoApo = new ApoliceDAO();
+        if (numero == null || numero.trim().isEmpty()) {
+            return null;
+        }
         return daoApo.buscar(numero);
     }
 
     public String excluirApolice(String numero) {
-        if (numero == null || numero.isBlank()) {
+        if (numero == null || numero.trim().isEmpty()) {
             return "Número deve ser informado";
         }
 
-        Apolice apolice = buscarApolice(numero);
+        Apolice apolice = daoApo.buscar(numero);
         if (apolice == null) {
             return "Apólice inexistente";
         }
 
-        Veiculo veiApolice = apolice.getVeiculo();
+        List<Sinistro> sinistros = daoSin.buscarTodosLista();
         int anoApolice = apolice.getDataInicioVigencia().getYear();
 
-        SinistroDAO daoSin = new SinistroDAO();
-        Sinistro[] todosSinistros = daoSin.buscarTodos();
-        if (todosSinistros != null) {
-            for (Sinistro sinistro : todosSinistros) {
-                if (sinistro != null && sinistro.getVeiculo() != null &&
-                        sinistro.getDataHoraSinistro() != null &&
-                        sinistro.getVeiculo().getPlaca().equalsIgnoreCase(veiApolice.getPlaca())) {
-                    int anoSinistro = sinistro.getDataHoraSinistro().getYear();
-                    if (anoSinistro == anoApolice) {
-                        return "Existe sinistro cadastrado para o veículo em questão e no mesmo ano da apólice";
-                    }
-                }
+        for (Sinistro sin : sinistros) {
+            int anoSinistro = sin.getDataHoraSinistro().getYear();
+            if (anoSinistro == anoApolice &&
+                    sin.getVeiculo() != null &&
+                    apolice.getVeiculo() != null &&
+                    sin.getVeiculo().getPlaca().equals(apolice.getVeiculo().getPlaca())) {
+                return "Existe sinistro cadastrado para o veículo em questão e no mesmo ano da apólice";
             }
         }
 
-        daoApo = new ApoliceDAO();
         daoApo.excluir(numero);
         return null;
-    }
-
-    private String validarTodosDadosVeiculo(DadosVeiculo dados) {
-        Segurado segurado = null;
-
-        SeguradoPessoaMediator seguradoPessoaMediator = SeguradoPessoaMediator.getInstancia();
-        SeguradoEmpresaMediator empresaMediator = SeguradoEmpresaMediator.getInstancia();
-        SeguradoPessoaDAO seguradoPessoaDAO = new SeguradoPessoaDAO();
-        SeguradoEmpresaDAO seguradoEmpresaDAO = new SeguradoEmpresaDAO();
-        String placa = dados.getPlaca();
-        daoApo = new ApoliceDAO();
-        daoVel = new VeiculoDAO();
-        daoVel = new VeiculoDAO();
-
-        if(dados.getPlaca() == null || dados.getPlaca().isBlank())
-            return "Placa do veículo deve ser informada";
-
-        if(dados.getCpfOuCnpj() == null)
-            return "CPF ou CNPJ deve ser informado";
-
-        Veiculo veiculo = daoVel.buscar(dados.getPlaca());
-        String cpfOuCnpj = dados.getCpfOuCnpj();
-
-        if (ehNuloOuBranco(cpfOuCnpj)) {
-            return "CPF ou CNPJ deve ser informado";
-        }
-        cpfOuCnpj = cpfOuCnpj.trim();
-
-        Veiculo vel = null;
-        boolean pessoa = true;
-        SeguradoPessoa seguradoPessoa = null;
-        SeguradoEmpresa seguradoEmpresa = null;
-
-        if (veiculo == null){
-
-            if(ehNuloOuBranco(placa)){
-                return "Placa do veículo deve ser informada";
-            }
-
-            placa = placa.trim();
-            if(placa.isEmpty()){
-                return "Placa do veículo deve ser informada";
-            }
-
-            int ano = dados.getAno();
-            if(ano < 2020 || ano > 2025){
-                return "Ano tem que estar entre 2020 e 2025, incluindo estes";
-            }
-            BigDecimal valorMaximoSegurado = dados.getValorMaximoSegurado();
-            if(valorMaximoSegurado == null){
-                return "Valor máximo segurado deve ser informado";
-            }
-            //verificacao categoria e valor
-            CategoriaVeiculo categoria = obterCategoriaPorCodigo(dados.getCodigoCategoria());
-            if(categoria == null){
-                return "Categoria inválida";
-            }
-            BigDecimal valorCarro = obterValorCarroParaAno(categoria, ano);
-            if(valorCarro.compareTo(BigDecimal.ZERO) == 0){
-                return "Valor do carro não encontrado para o ano";
-            }
-            BigDecimal limiteInferior = valorCarro.multiply(new BigDecimal("0.75"));
-            BigDecimal limiteSuperior = valorCarro.multiply(new BigDecimal("1.00"));
-            if (valorMaximoSegurado.compareTo(limiteInferior) < 0 || valorMaximoSegurado.compareTo(limiteSuperior) > 0) {
-                return "Valor máximo segurado deve estar entre 75% e 100% do valor do carro encontrado na categoria";
-            }
-
-            if (dados.getCodigoCategoria() < 1 || dados.getCodigoCategoria() > 5) {
-                return "Categoria inválida";
-            }
-            String numeroApolice = gerarNumero(dados.getCpfOuCnpj(), dados.getPlaca());
-            if (daoApo.buscar(numeroApolice) != null) {
-                return "Apólice já existente para ano atual e veículo";
-            }
-        }
-
-        if (cpfOuCnpj.length() == 11) {
-            String msgCpf = seguradoPessoaMediator.validarCpf(cpfOuCnpj);
-            if (msgCpf != null) {
-                return "CPF inválido"; // Força retorno esperado pelo teste
-            }
-            seguradoPessoa = seguradoPessoaDAO.buscar(cpfOuCnpj);
-            if (seguradoPessoa == null) {
-                return "CPF inexistente no cadastro de pessoas";
-            }
-        } else if (cpfOuCnpj.length() == 14) {
-            String msgCnpj = empresaMediator.validarCnpj(cpfOuCnpj);
-            if (msgCnpj != null) {
-                return "CNPJ inválido"; // Força retorno esperado pelo teste
-            }
-            seguradoEmpresa = seguradoEmpresaDAO.buscar(cpfOuCnpj);
-            if (seguradoEmpresa == null) {
-                return "CNPJ inexistente no cadastro de empresas";
-            }
-            pessoa = false;
-        } else {
-            return "CPF ou CNPJ deve ser informado";
-        }
-
-        if (veiculo != null) {
-
-            Segurado seguradoAtual = veiculo.getProprietario();
-            String cpfOuCnpjAtual = null;
-
-            if (seguradoAtual != null) {
-                if (seguradoAtual.isEmpresa()) {
-                    cpfOuCnpjAtual = ((SeguradoEmpresa) seguradoAtual).getCnpj();
-                } else {
-                    cpfOuCnpjAtual = ((SeguradoPessoa) seguradoAtual).getCpf();
-                }
-            }
-
-            // Verifica se o proprietário atual está errado e precisa ser atualizado
-            if (seguradoAtual == null || !dados.getCpfOuCnpj().equals(cpfOuCnpjAtual)) {
-                if (dados.getCpfOuCnpj().length() == 11) {
-                    veiculo.setProprietario(seguradoPessoa);
-                } else {
-                    veiculo.setProprietario(seguradoEmpresa);
-                }
-                daoVel.alterar(veiculo);
-            }
-
-            // Verificação de valor máximo segurado
-            if (dados.getValorMaximoSegurado() == null || dados.getValorMaximoSegurado().compareTo(BigDecimal.ZERO) <= 0) {
-                return "Valor máximo segurado inválido.";
-            }
-
-            // Geração e verificação de apólice existente
-            String numeroApolice = gerarNumero(dados.getCpfOuCnpj(), dados.getPlaca());
-            if (daoApo.buscar(numeroApolice) != null) {
-                return "Apólice já existente para ano atual e veículo";
-            }
-        }
-
-
-        if(pessoa){
-            vel = new Veiculo(dados.getPlaca(), dados.getAno(), segurado, obterCategoriaPorCodigo(dados.getCodigoCategoria()));
-        } else{
-            vel = new Veiculo(dados.getPlaca(), dados.getAno(), segurado, obterCategoriaPorCodigo(dados.getCodigoCategoria()));
-        }
-
-        if (veiculo == null)
-            daoVel.incluir(vel);
-        else
-            daoVel.alterar(vel);
-
-        return null;
-    }
-
-    private String validarCpfCnpjValorMaximo(DadosVeiculo dados) {
-        SeguradoPessoaMediator seguradoPessoaMediator = SeguradoPessoaMediator.getInstancia();
-        SeguradoEmpresaMediator empresaMediator = SeguradoEmpresaMediator.getInstancia();
-
-        if(dados.getCpfOuCnpj().length() == 11){
-            SeguradoPessoa seg = daoSegPes.buscar(dados.getCpfOuCnpj());
-            if (seg != null){
-                seguradoPessoaMediator.validarCpf(dados.getCpfOuCnpj());
-                BigDecimal valorMax = obterValorMaximoPermitido(dados.getAno(), dados.getCodigoCategoria());
-            }
-        } else if (dados.getCpfOuCnpj().length() == 14){
-            String cnpj = seguradoPessoaMediator.validarCpf(dados.getCpfOuCnpj());
-            BigDecimal valorMax = obterValorMaximoPermitido(dados.getAno(), dados.getCodigoCategoria());
-        }
-
-        return null;
-    }
-
-    private BigDecimal obterValorMaximoPermitido(int ano, int codigoCat) {
-        for (CategoriaVeiculo categoria : CategoriaVeiculo.values()) {
-            if (categoria.getCodigo() == codigoCat) {
-                for (PrecoAno precoAno : categoria.getPrecosAnos()) {
-                    if (precoAno.getAno() == ano) {
-                        return BigDecimal.valueOf(precoAno.getPreco());
-                    }
-                }
-            }
-        }
-        return BigDecimal.ZERO;
-    }
-
-    private String gerarNumero(String cpfOuCnpj, String placa) {
-        String anoAtual = String.valueOf(LocalDate.now().getYear());
-        if(cpfOuCnpj.length() == 11){
-            return anoAtual + "000" + cpfOuCnpj + placa;
-        } else if (cpfOuCnpj.length() == 14){
-            return anoAtual + cpfOuCnpj + placa;
-        }
-        return null;
-    }
-
-    private BigDecimal calcularPremio(Segurado segurado, boolean isEhLocadoraDeVeiculos, DadosVeiculo dados){
-        BigDecimal percentual = new BigDecimal("0.03"); // 3%
-
-        BigDecimal vpa = percentual.multiply(dados.getValorMaximoSegurado());
-        BigDecimal vpb;
-
-        if (isEhLocadoraDeVeiculos){
-            BigDecimal multiplicador = new BigDecimal("1.2");
-            vpb = vpa.multiply(multiplicador);
-        } else{
-            vpb = vpa;
-        }
-
-        BigDecimal vpc = vpb.subtract(segurado.getBonus().divide(BigDecimal.TEN));
-
-        if(vpc.compareTo(BigDecimal.ZERO) > 0)
-            return vpc;
-        else
-            return BigDecimal.ZERO;
     }
 }
